[gd_scene load_steps=2 format=3 uid="uid://dbkorxkdqfr4b"]

[ext_resource type="Script" path="res://experience/experience.gd" id="1_n6dy0"]

[node name="Experience" type="Node"]
script = ExtResource("1_n6dy0")

[connection signal="exp_changed" from="." to="." method="_on_exp_changed"]
[connection signal="level_changed" from="." to="." method="_on_level_changed"]
